increase row number width to prevent collapse on 3-digit row

--- a/src/components/AppListItem/style.module.scss
+++ b/src/components/AppListItem/style.module.scss
@@ -23,7 +23,7 @@
 }
 
 .rowNumber {
-    width: 36px;
+    width: 52px;
     font-size: $H2;
     color: $greyTextColor;
     font-weight: 100;
